# formatting

./: .gitignore  CMakeLists.txt  README.md
include/: source_location_formatter.h
src/: main.cpp
tests/: CMakeLists.txt  test_source_location_formatter.cpp
